# numeric

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: big_int.rs  bit_slice.rs  utils.rs
crates/bench-util/: Cargo.toml
crates/bench-util/src/: lib.rs
crates/bits/: Cargo.toml
crates/bits/benches/: bit_slice.rs  utils.rs
crates/bits/src/: algos.rs  bit_slice.rs  endian.rs  lib.rs  utils.rs
crates/bits/src/algos/: add.rs  bits.rs  bitwise.rs  cmp.rs  div_rem.rs  element.rs  mul.rs  shift.rs  sub.rs
crates/bits/src/algos/add/: impls.rs
crates/bits/src/algos/bits/: impls.rs
crates/bits/src/algos/bitwise/: add.rs  div.rs  mul.rs  shl.rs  shr.rs  sub.rs
crates/bits/src/algos/cmp/: impls.rs
crates/bits/src/algos/div_rem/: impls.rs
crates/bits/src/algos/element/: add.rs  bitand.rs  bitor.rs  bitxor.rs  cmp.rs  div.rs  mul.rs  neg.rs  shl.rs  shr.rs  sub.rs
crates/bits/src/algos/mul/: impls.rs
crates/bits/src/algos/shift/: impls.rs
crates/bits/src/algos/sub/: impls.rs
crates/bits/src/bit_slice/: iter.rs
crates/compounds/: Cargo.toml
crates/compounds/benches/: matrix.rs
crates/compounds/src/: bivec.rs  complex.rs  lib.rs  matrix.rs  rotor.rs  vector.rs
crates/compounds/src/matrix/: dynamic.rs  macros.rs  refs.rs  static.rs
crates/ints/: Cargo.toml
crates/ints/benches/: big_int.rs
crates/ints/src/: big_int.rs  i.rs  lib.rs  tests.rs  u.rs
crates/ints/src/big_int/: macros.rs
crates/ints/src/i/: rand_impl.rs
crates/ints/src/u/: rand_impl.rs
crates/numeric/: Cargo.toml
crates/numeric-bits/: Cargo.toml
crates/numeric-bits/benches/: bit_slice.rs  utils.rs
crates/numeric-bits/src/: bit_slice.rs  lib.rs  utils.rs
crates/numeric-bits/src/bit_slice/: iter.rs
crates/numeric-bits/src/bit_slice/algos/: bitwise.rs
crates/numeric-bits/src/bit_slice/algos/element/: add.rs  bitand.rs  bitor.rs  bitxor.rs  cmp.rs  div.rs  mul.rs  shl.rs  shr.rs  sub.rs
crates/numeric-compounds/: Cargo.toml
crates/numeric-compounds/src/: complex.rs  lib.rs  vector.rs
crates/numeric-ints/: Cargo.toml
crates/numeric-ints/benches/: big_int.rs
crates/numeric-ints/src/: big_int.rs  i.rs  lib.rs  u.rs
crates/numeric-ints/src/big_int/: macros.rs
crates/numeric-reals/: Cargo.toml
crates/numeric-reals/src/: decimal.rs  fixed.rs  lib.rs  p.rs
crates/numeric-traits/: Cargo.toml
crates/numeric-traits/src/: __impl.rs  cast.rs  class.rs  identity.rs  lib.rs  ops.rs
crates/numeric-traits/src/__impl/: nz.rs
crates/numeric-traits/src/ops/: checked.rs  core.rs  saturating.rs  widening.rs
crates/numeric-types/: Cargo.toml
crates/numeric-utils/: Cargo.toml
crates/numeric-utils/src/: intern.rs  into_owned.rs  lib.rs  linked.rs  macros.rs  static_iter.rs
crates/numeric-utils/src/static_iter/: adapter.rs  array.rs
crates/numeric/benches/: utils.rs
crates/numeric/src/: bit_slice.rs  lib.rs  macros.rs  traits.rs  utils.rs
crates/numeric/src/bit_slice/: iter.rs
crates/numeric/src/bit_slice/algos/: bitwise.rs
crates/numeric/src/bit_slice/algos/element/: add.rs  div.rs  mul.rs  shl.rs  shr.rs  sub.rs
crates/numeric/src/compound/: complex.rs  matrix.rs  vector.rs
crates/numeric/src/int/: big_int.rs  i.rs  u.rs
crates/numeric/src/intern/: linked.rs
crates/numeric/src/real/: f.rs  fixed.rs
crates/reals/: Cargo.toml
crates/reals/src/: decimal.rs  f.rs  fixed.rs  lib.rs  p.rs  rat.rs
crates/static-iter/: Cargo.toml
crates/static-iter/src/: adapter.rs  array.rs  codegen.rs  lib.rs  zip_all.rs
crates/traits/: Cargo.toml
crates/traits/src/: __impl.rs  bytes.rs  cast.rs  class.rs  identity.rs  lib.rs  ops.rs
crates/traits/src/__impl/: nz.rs
crates/traits/src/ops/: checked.rs  core.rs  overflowing.rs  saturating.rs  widening.rs  wrapping.rs
crates/utils/: Cargo.toml
crates/utils/src/: intern.rs  lib.rs  linked.rs  macros.rs
src/: big_int.rs  bit_slice.rs  decimal.rs  f.rs  fixed.rs  i.rs  intern.rs  lib.rs  macros.rs  traits.rs  u.rs  utils.rs
src/big_int/: macros.rs
src/bit_slice/: algos.rs  iter.rs
src/bit_slice/algos/: bitwise.rs  element.rs
src/bit_slice/algos/element/: add.rs  div.rs  mul.rs  shl.rs  shr.rs  sub.rs
src/compound/: complex.rs  vector.rs
src/int/: big_int.rs  u.rs
src/int/big_int/: macros.rs
src/intern/: linked.rs
src/real/: decimal.rs  fixed.rs
