[workspace]
resolver = "2"
members = [
    "crates/numeric",
    "crates/utils",
    "crates/traits",
    "crates/bits",
    "crates/ints",
    "crates/reals",
    "crates/compounds",
    "crates/static-iter",
    "crates/bench-util",
]

[profile.bench]
debug = true

[workspace.lints.rust]
#missing_docs = "warn"

[workspace.lints.clippy]
ptr_as_ptr = "warn"
unreadable_literal = "warn"
#undocumented_unsafe_blocks = "warn"
