lints.workspace = true

[package]
name = "numeric-bits"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
alloc = ["numeric-traits/alloc"]
std = ["numeric-traits/std"]

[dependencies]
numeric-traits = { path = "../traits", default-features = false }

[dev-dependencies]
numeric-bench-util = { path = "../bench-util" }
criterion = { version = "0.8", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bit_slice"
harness = false

[[bench]]
name = "utils"
harness = false
