lints.workspace = true

[package]
name = "numeric-compounds"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
alloc = ["numeric-utils/alloc", "numeric-ints/alloc", "numeric-traits/alloc"]
std = ["numeric-utils/std", "numeric-ints/std", "numeric-traits/std", "alloc"]

[dependencies]
numeric-static-iter = { path = "../static-iter", default-features = false }
numeric-utils = { path = "../utils", default-features = false }
numeric-traits = { path = "../traits", default-features = false }
numeric-ints = { path = "../ints", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
numeric-bench-util = { path = "../bench-util" }

[[bench]]
name = "matrix"
harness = false
