[package]
name = "numeric-ints"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["numeric-utils/std", "numeric-bits/std", "numeric-traits/std"]

[dependencies]
rand = { version = "0.9.0-alpha.0", optional = true }
numeric-traits = { path = "../traits" }
numeric-bits = { path = "../bits" }
numeric-utils = { path = "../utils" }
numeric-static-iter = { path = "../static-iter" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
numeric-bench-util = { path = "../bench-util" }

[[bench]]
name = "big_int"
harness = false
