lints.workspace = true

[package]
name = "numeric-ints"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
rand = ["dep:rand"]
alloc = ["numeric-utils/alloc", "numeric-bits/alloc", "numeric-traits/alloc"]
std = ["numeric-utils/std", "numeric-bits/std", "numeric-traits/std", "alloc"]

[dependencies]
arrayvec = "0.7"
rand = { version = "0.10", optional = true }
numeric-traits = { path = "../traits", default-features = false }
numeric-bits = { path = "../bits", default-features = false }
numeric-utils = { path = "../utils", default-features = false }
numeric-static-iter = { path = "../static-iter", default-features = false }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
numeric-bench-util = { path = "../bench-util" }

[[bench]]
name = "big_int"
harness = false
