[package]
name = "numeric-bits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric-traits = { path = "../numeric-traits" }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11", features = ["flamegraph", "criterion"] }

[[bench]]
name = "bit_slice"
harness = false

[[bench]]
name = "utils"
harness = false
