[package]
name = "numeric-ints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numeric-traits = { path = "../numeric-traits" }
numeric-bits = { path = "../numeric-bits" }
numeric-utils = { path = "../numeric-utils" }
num-traits = "0.2"
