lints.workspace = true

[package]
name = "numeric"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["numeric-traits/std", "numeric-ints/std", "numeric-reals/std", "numeric-compounds/std"]
rand = ["numeric-ints/rand"]

[dependencies]
numeric-traits = { path = "../traits" }
numeric-ints = { path = "../ints" }
numeric-reals = { path = "../reals" }
numeric-compounds = { path = "../compounds" }
