lints.workspace = true

[package]
name = "numeric"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
alloc = ["numeric-traits/alloc", "numeric-ints/alloc", "numeric-reals/alloc", "numeric-compounds/alloc"]
std = ["numeric-traits/std", "numeric-ints/std", "numeric-reals/std", "numeric-compounds/std", "alloc"]
rand = ["numeric-ints/rand"]

[dependencies]
numeric-traits = { path = "../traits", default-features = false }
numeric-ints = { path = "../ints", default-features = false }
numeric-reals = { path = "../reals", default-features = false }
numeric-compounds = { path = "../compounds", default-features = false }
